React and Angular

--- a/Advance Web Technology/Session-1/exp8/index.html
+++ b/Advance Web Technology/Session-1/exp8/index.html
@@ -10,43 +10,31 @@
 </head>
 
 <body>
-    <style>
-        #btn1{
-            background-color: #3bbac2 !important;
-        }
-        .mail {
-            background-color: #f1f1f1;
-            padding: 20px;
-            text-align: center;
-            margin-top: 10%;
-            margin-left: 25%;
-            margin-right: 25%;
-
-            width: 50%;
-        }
-
-        .header {
-            background-color: #c7c6c6;
-            padding: 20px;
-            text-align: center;
-        }
-        .resetbutton {
-            text-align: center;
-            margin: 1%;
-        }
-    </style>
-    <section class="mail">
-        <div class="header">
+    <section class="mail" style="background-color: #f1f1f1;
+    padding: 20px;
+    text-align: center;
+    margin-top: 10%;
+    margin-left: 25%;
+    margin-right: 25%;
+    width: 50%;">
+        <div class="header" style="background-color: #c7c6c6;
+        padding: 20px;
+        text-align: center;">
             <h1>Forgot your password?</h1>
             <h3 class="text" style="color: #9d9d9d;"> Rooster Fraudlent taped much otter ouch excluding</h3>
         </div>
         <!-- button section -->
-        <div class="resetbutton">            
-            <button type="button" id="btn1" class="btn btn-success">Reset password</button>
+        <div class="resetbutton" style="text-align: center;margin: 1%;">
+            <button type="button" id="btn1" class="btn btn-success" style="background-color: #3bbac2 !important;">Reset
+                password</button>
         </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+        integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
